add mouse options for older tmux versions

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,7 +16,11 @@ bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
 # enable mouse controls
-set -g mouse on
+set -gq mouse on
+set -gq mode-mouse on
+set -gq mouse-resize-pane on
+set -gq mouse-select-pane on
+set -gq mouse-select-window on
 
 # more history
 set -g history-limit 20000
