--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,7 @@
 # enable 256 color mode
 set -g default-terminal "xterm-256color"
 
-# exit unattached terminals for desktop use
-set -g destroy-unattached off
+# renumber when windows are removed
 set -g renumber-windows on
 
 # split downwards: alt+,  sideways: alt+.
@@ -19,8 +18,37 @@ bind -n M-Down select-pane -D
 set -g mouse on
 
 # more history
-set -g history-limit 20000
+set -g history-limit 40000
 
 # change terminal title
 set -g set-titles on
-set -g set-titles-string "#W"
+set -g set-titles-string '#H/#(whoami)/#I:#P/#W'
+
+# statusbar
+set -g status on
+set -g status-position top
+set -g status-justify centre
+
+set -g status-left ' #I:#P/#W '
+set -g status-right ' #h/#(whoami) '
+set -g window-status-format ' #I:#W '
+set -g window-status-current-format ' #I:#F#W '
+
+set -g status-bg default
+set -g status-fg colour2
+set -g status-left-bg colour6
+set -g status-left-fg colour15
+set -g status-right-bg colour6
+set -g status-right-fg colour15
+set -g window-status-current-bg colour2
+set -g window-status-current-fg colour15
+
+# pane borders
+set -g pane-border-bg default
+set -g pane-border-fg colour5
+set -g pane-active-border-bg default
+set -g pane-active-border-fg colour6
+
+# enable automatic renaming
+set-window-option -g automatic-rename on
+
